# TrollEdit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  Instructions to run.txt  LICENSE.txt  README  README.md  TrollEditor.pro  analyzer.cpp  analyzer.h  block.cpp  block.h  build  build.bat  document_scene.cpp  document_scene.h  document_tabs.cpp  document_tabs.h  helpbrowser.cpp  helpbrowser.h  hide_block_button.cpp  hide_block_button.h  ico.rc  language_manager.cpp  language_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  paired_tree_element.cpp  paired_tree_element.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingspages.cpp  settingspages.h  text_item.cpp  text_item.h  tree_element.cpp  (+1 more)
analysis/: analyzer.cpp  analyzer.h  language_manager.cpp  language_manager.h  paired_tree_element.cpp  paired_tree_element.h  tree_element.cpp  tree_element.h
data/: config_app.lua
data/doc/: index.html
data/doc/.svn/: all-wcprops  entries
data/doc/.svn/text-base/: index.html.svn-base  test_page1.html.svn-base  test_page2.html.svn-base  test_page3.html.svn-base
data/doc/images/.svn/: all-wcprops  entries
data/doc/images/.svn/text-base/: folding.png.svn-base  icon.png.svn-base  printableArea.png.svn-base  search2.png.svn-base
data/grammars/: c_grammar.lua  config.lua  default_grammar.lua  lua_grammar.lua  snippets.lua  todolist_grammar.lua  xml_grammar.lua
data/grammars/.svn/: all-wcprops  dir-prop-base  entries
data/grammars/.svn/text-base/: c_grammar.lua.svn-base  config.lua.svn-base  default_grammar.lua.svn-base  snippets.lua.svn-base  xml_grammar.lua.svn-base
data/tests/: 12.c  cake.c  carcassonne.xml  euclidean.c  hello.lua  in.c  input.c  input.xml  inverse_matrix.c  text.txt  tickets.c
debug/doc/: index.html  test_page2.html  test_page3.html
debug/grammars/: c_grammar.lua  config.lua  default_grammar.lua  xml_grammar.lua
gui/: arrow.cpp  arrow.h  block.cpp  block.h  block_group.cpp  block_group.h  doc_block.cpp  doc_block.h  fold_button.cpp  fold_button.h  hide_block_button.cpp  hide_block_button.h  text_item.cpp  text_item.h
input/: euclidean.c  in.c  input.c  input.xml  text.txt
lpeg/: CMakeLists.txt
luajit/: CMakeLists.txt
luajit/src/: lj_alloc.c  luaconf.h
res/: aboutVersion.txt  my.res  resources.qrc  shortcuts.ini  trolledit.aps  trolledit.icns  trolledit.rc  trolledit_app.icns  trolledit_pkg.icns  trolledit_rmv.icns
res/ConfigFiles/: aboutVersion.conf  shortcuts.ini
src/: abouttrolledit.cpp  abouttrolledit.h  analyzer.cpp  analyzer.h  arrow.cpp  arrow.h  block.cpp  block.h  block_group.cpp  block_group.h  blockmanager.cpp  blockmanager.h  bottomdock.cpp  bottomdock.h  close_button.cpp  close_button.h  commands.cpp  commands.h  doc_block.cpp  doc_block.h  document_scene.cpp  document_scene.h  document_tabs.cpp  document_tabs.h  fold_button.cpp  fold_button.h  language_manager.cpp  language_manager.h  main.cpp  main_window.cpp  main_window.h  qlist_AST.cpp  qlist_AST.h  rightdock.cpp  rightdock.h  setting.cpp  setting.h  text_group.cpp  text_group.h  text_item.cpp  (+7 more)
src/analysis/: analyzer.cpp  language_manager.cpp  tree_element.h
src/gui/: text_item.cpp
src/lpeg-0.9/: CMakeLists.txt
src/lua-5.1.4/: CMakeLists.txt
src/luajit-1.1.6/: CMakeLists.txt
src/trolledit/: analyzer.cpp  analyzer.h  arrow.cpp  arrow.h  block.cpp  block.h  block_group.cpp  block_group.h  doc_block.cpp  doc_block.h  document_scene.cpp  document_scene.h  fold_button.cpp  fold_button.h  language_manager.cpp  language_manager.h  main.cpp  main_window.cpp  main_window.h  text_item.cpp  text_item.h  tree_element.cpp  tree_element.h
src/widget/: document_scene.cpp  document_scene.h  main_window.cpp
ui/: abouttrolledit.ui  bottomdock.ui  rightdock.ui  setting.ui  tips_tricks.ui
widget/: document_scene.cpp  document_scene.h  document_tabs.cpp  document_tabs.h  main.cpp  main_window.cpp  main_window.h  ui_main_window.h
